Bug 1949151 - Don't double-account for borders and padding when getting an orthogonal flow's intrinsic block size. r=dshin

This corrects the rendering of the example here; a WPT reftest version
of the test is added in following patch.

(There are a number of existing layout tests in css/css-writing-modes
that are also impacted, but still fail for the time being due to
bug 1949148.)

Differential Revision: https://phabricator.services.mozilla.com/D240013